--- a/jupyterNotebooks/Robotic Arm Simulation.ipynb
+++ b/jupyterNotebooks/Robotic Arm Simulation.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "id": "93e0d789",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "id": "3c774fed",
    "metadata": {},
    "outputs": [
@@ -152,8 +152,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f3525d9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "q1 = 90.0°.\n",
+      "q2 = 90.0°.\n",
+      "q3 = 0.0°.\n",
+      "q4 = 62.0°.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Compute the inverse kinematics\n",
+    "ik1 = robot.ikine_LM(fk1, joint_limits = True)\n",
+    "\n",
+    "for i in range(len(ik1.q)):\n",
+    "    print(f'q{i+1} = {round(degrees(ik1.q[i]),2)}°.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8548d0a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da28ab9d",
    "metadata": {},
    "outputs": [],
    "source": []
